--- a/ios/ThuanHanhMobileApp/Info.plist
+++ b/ios/ThuanHanhMobileApp/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>Thuận Hành</string>
+	<string>Dụng cụ diện chẩn</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -34,7 +34,7 @@
 		<true/>
 		<key>NSExceptionDomains</key>
 		<dict>
-			<key>thuanhanhmobileapp.thietkevuondao.com</key>
+			<key>api.dienchanthuchanh.com</key>
 			<dict>
 				<key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
 				<true/>
